deploy/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
  - name: "api"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
