deploy/mightycalc-api-svc-external.yaml

apiVersion: v1
kind: Service
metadata:
  name: mightycalc-svc-external
  labels:
    app: mightycalc
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  ports:
  - port: 80
    protocol: TCP
    name: mightycalc-http
  selector:
    app: mightycalc
