deploy/ingress_example.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: my-echo-deploy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echoserver
        image: aleskov/mightycalc
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-echo-svc
  labels:
    app: echo
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: my-http-port
  selector:
    app: echo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-echo-ingress
spec:
  tls:
  -  secretName: tls-certificate
  backend:
    serviceName: my-echo-svc
    servicePort: my-http-port
